[gd_scene load_steps=5 format=3 uid="uid://buc5yqwipggd7"]

[ext_resource type="Script" path="res://Personaje/Luis/particulas/particles.gd" id="1_leaxu"]
[ext_resource type="PackedScene" uid="uid://youdt3f7onux" path="res://Personaje/personaje.tscn" id="2_ut4uh"]
[ext_resource type="Texture2D" uid="uid://c38kyyfnmscve" path="res://Assets/Egyptian_D.png" id="3_qmxqe"]

[sub_resource type="AtlasTexture" id="AtlasTexture_2huv8"]
atlas = ExtResource("3_qmxqe")
region = Rect2(255.804, 191.738, 95.9449, 129.559)

[node name="particles" type="Node2D"]
script = ExtResource("1_leaxu")

[node name="Player" parent="." instance=ExtResource("2_ut4uh")]
position = Vector2(568, 327)

[node name="Camera2D" type="Camera2D" parent="Player"]

[node name="CPUParticles2D" type="CPUParticles2D" parent="Player/Camera2D"]
z_index = 20
position = Vector2(-16, -302.082)
scale = Vector2(1, 0.896387)
amount = 10
lifetime = 1.17
speed_scale = 1.5
emission_shape = 3
emission_rect_extents = Vector2(580, 1)
radial_accel_min = 20.0
radial_accel_max = 20.0
scale_amount_min = 2.0
scale_amount_max = 2.0
color = Color(1, 0.882353, 0.101961, 1)
hue_variation_min = -0.93

[node name="CPUParticles2D9" type="CPUParticles2D" parent="Player/Camera2D"]
position = Vector2(-234, -311)
amount = 1
lifetime = 4.0
texture = SubResource("AtlasTexture_2huv8")
initial_velocity_max = 20.2

[node name="CPUParticles2D10" type="CPUParticles2D" parent="Player/Camera2D"]
position = Vector2(4, -298)
amount = 1
lifetime = 4.0
texture = SubResource("AtlasTexture_2huv8")
initial_velocity_max = 20.2

[node name="CPUParticles2D11" type="CPUParticles2D" parent="Player/Camera2D"]
position = Vector2(304, -326)
amount = 1
lifetime = 4.0
texture = SubResource("AtlasTexture_2huv8")
initial_velocity_max = 20.2

[node name="CPUParticles2D12" type="CPUParticles2D" parent="Player/Camera2D"]
position = Vector2(167, -311)
amount = 1
lifetime = 4.0
texture = SubResource("AtlasTexture_2huv8")
initial_velocity_max = 20.2

[node name="CPUParticles2D13" type="CPUParticles2D" parent="Player/Camera2D"]
position = Vector2(-495, -315)
amount = 1
lifetime = 4.0
texture = SubResource("AtlasTexture_2huv8")
initial_velocity_max = 20.2

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Timer2" type="Timer" parent="."]
one_shot = true

[node name="Timer3" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_timer_2_timeout"]
[connection signal="timeout" from="Timer3" to="." method="_on_timer_3_timeout"]
